--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- end nav -->
         <div class=" d-flex justify-content-center sc1 mt-5">
             <div class="txtvidio d-flex justify-content-center align-items-center flex-column text-white">
-                <h6 style="font-size: 25px;"><span>مرحبًا بكم في عصر التعليم الرقمي، حيث تتحول التجارب التعليمية</span> <br> بفضل التكنولوجيا إلى رحلات مثيرة ومفعمة بالاكتشاف والتحفيز</h6>
+                <h6 style="font-size: 25px; text-align: center;"><span>مرحبًا بكم في عصر التعليم الرقمي، حيث تتحول التجارب التعليمية</span> <br> بفضل التكنولوجيا إلى رحلات مثيرة ومفعمة بالاكتشاف والتحفيز</h6>
                 <!-- <h2 class="easy">easy with our <span> gym</span></h2> -->
                
             </div>
@@ -59,7 +59,7 @@
     <div class="about d-flex flex-column align-items-center justify-content-center container">
         
         <img class="mb-3" src="images/line-dec.png" width="5%" alt="">
-        <p style="font-size: 20px;" id="features " class="text-style">  يسعى عالمنا المعاصر إلى تشكيل مستقبل التعليم بواسطة التكنولوجيا، وبناء بيئة تعليمية ملهمة ومبتكرة تتسم بالتفاعلية والتخصيص من خلال استخدام أحدث التقنيات، يسعى العالم إلى توفير فرص تعلم متنوعة وملهمة تلبي احتياجات المتعلمين في عصرنا الحديث، فالتكنولوجيا لم تعد مجرد أداة إضافية في العملية التعليمية بل أصبحت شريكًا أساسيًا في رحلة الاكتساب المعرفي وتطوير القدرات البشرية، يدعوكم موقعنا لاستكشاف عالم التكنولوجيا في التعليم وتجربة مستقبل التعلم الذي يعتمد على الابتكار والتفاعلية والمرونة.
+        <p style="font-size: 20px;text-align: center;" id="features " class="text-style">  يسعى عالمنا المعاصر إلى تشكيل مستقبل التعليم بواسطة التكنولوجيا، وبناء بيئة تعليمية ملهمة ومبتكرة تتسم بالتفاعلية والتخصيص من خلال استخدام أحدث التقنيات، يسعى العالم إلى توفير فرص تعلم متنوعة وملهمة تلبي احتياجات المتعلمين في عصرنا الحديث، فالتكنولوجيا لم تعد مجرد أداة إضافية في العملية التعليمية بل أصبحت شريكًا أساسيًا في رحلة الاكتساب المعرفي وتطوير القدرات البشرية، يدعوكم موقعنا لاستكشاف عالم التكنولوجيا في التعليم وتجربة مستقبل التعلم الذي يعتمد على الابتكار والتفاعلية والمرونة.
         </p>
     </div>
  <!--  -->
